--- a/WolkenNET/templates/footer.html
+++ b/WolkenNET/templates/footer.html
@@ -1,15 +1,17 @@
-
 </div>
 
 <#include "snippets/modal.html">
 
-<script src="/js/script.js"></script>
+  <script src="/js/script.js"></script>
 
-<div class="footer">
-    © 2021-2021 WolkenNET 
-    <a href="/team" title="Wer arbeitet an diesem Ding?"><i class="fas fa-chalkboard-teacher"></i> Team</a> | 
-    <a href="/impressum"><i class="fas fa-info"></i> Impressum</a> | 
-    <a href="/datenschutz" title="Wie schützen wir eure Daten?"> <i class="fas fa-user-shield"></i> Datenschutzerklärung</a> |
-    <a href="/forenregeln" title="Damit wir auch in der Legalität bleiben"> <i class="fas fa-ruler"></i> Forenregeln</a> |
-    <a href="/telefon-seelsorge" title="Du suchst professionelle Seelsorge?"> <i class="fas fa-phone-square"></i> Telefonseelsorge</a>
-</div>
+  <div class="footer">
+    © 2021-2021 WolkenNET
+    <a href="/team" title="Wer arbeitet an diesem Ding?"><i class="fas fa-chalkboard-teacher"></i> Team</a> |
+    <a href="/impressum"><i class="fas fa-info"></i> Impressum</a> |
+    <a href="/datenschutz" title="Wie schützen wir eure Daten?"> <i class="fas fa-user-shield"></i>
+      Datenschutzerklärung</a> |
+    <a href="/forenregeln" title="Damit wir auch in der Legalität bleiben"> <i class="fas fa-ruler"></i> Forenregeln</a>
+    |
+    <a href="/telefon-seelsorge" title="Du suchst professionelle Seelsorge?"> <i class="fas fa-phone-square"></i>
+      Telefonseelsorge</a>
+  </div>
