--- a/WolkenNET/templates/telefonseelsorge.html
+++ b/WolkenNET/templates/telefonseelsorge.html
@@ -1,10 +1,23 @@
 <#include "base.html">
-<div class="container container-home col-8-home col-8-imp">
-    <p>Mehr als zwei Millionen Gespräche werden in der Telefonseelsorge jedes Jahr geführt, kostenfrei und rund um die Uhr. Bundesweit gibt es 105 Telefonseelsorgestellen. Die Mitarbeiterinnen und Mitarbeiter sind sich ihrer verantwortungsvollen Aufgabe bewusst und nehmen Ihren Anruf ernst – egal, ob um acht Uhr morgens oder um Mitternacht. Wählen Sie einfach diese Nummern <n class="telefon">0800 1110-111</n> oder <n class="telefon">0800 1110-222</n> oder <n class="telefon">116123</n></p>
-    
-<p>Etwa 7.500 Ehrenamtliche, die durch Fachkräfte ausgebildet und begleitet werden, führen Seelsorge- und Beratungsgespräche mit Menschen in akuten Krisen oder längerfristig schwierigen Lebenssituationen: Ängste, seelische und körperliche Einschränkungen und Beziehungsfragen sind die häufigsten Themen der Gespräche. Eine wichtige Aufgabe ist Auseinandersetzung mit suizidalen Situationen.</p>
-<p>Sie können sich auch <a href="http://www.telefonseelsorge.de/?q=node/11" title="Externer Link - öffnet in neuem Fenster" target="_blank" class="external-link">per Chat</a>, <a href="http://www.telefonseelsorge.de/?q=node/10" title="Externer Link - öffnet in neuem Fenster" target="_blank" class="external-link">Mail</a> oder auch durch <a href="http://www.telefonseelsorge.de/?q=node/7647" title="Externer Link - öffnet in neuem Fenster" target="_blank" class="external-link">eine Face-to-Face Beratung</a> an die Telefonseelsorge wenden.</p>
-<a target="_blank" href="https://hilfe.diakonie.de/telefonseelsorge">Quelle</a> Diakonie Deutschland
-</div>
+    <div class="container container-home col-8-home col-8-imp">
+        <p>Mehr als zwei Millionen Gespräche werden in der Telefonseelsorge jedes Jahr geführt, kostenfrei und rund um
+            die Uhr. Bundesweit gibt es 105 Telefonseelsorgestellen. Die Mitarbeiterinnen und Mitarbeiter sind sich
+            ihrer verantwortungsvollen Aufgabe bewusst und nehmen Ihren Anruf ernst – egal, ob um acht Uhr morgens oder
+            um Mitternacht. Wählen Sie einfach diese Nummern <n class="telefon">0800 1110-111</n> oder <n
+                class="telefon">0800 1110-222</n> oder <n class="telefon">116123</n>
+        </p>
 
-<#include "footer.html">
+        <p>Etwa 7.500 Ehrenamtliche, die durch Fachkräfte ausgebildet und begleitet werden, führen Seelsorge- und
+            Beratungsgespräche mit Menschen in akuten Krisen oder längerfristig schwierigen Lebenssituationen: Ängste,
+            seelische und körperliche Einschränkungen und Beziehungsfragen sind die häufigsten Themen der Gespräche.
+            Eine wichtige Aufgabe ist Auseinandersetzung mit suizidalen Situationen.</p>
+        <p>Sie können sich auch <a href="http://www.telefonseelsorge.de/?q=node/11"
+                title="Externer Link - öffnet in neuem Fenster" target="_blank" class="external-link">per Chat</a>, <a
+                href="http://www.telefonseelsorge.de/?q=node/10" title="Externer Link - öffnet in neuem Fenster"
+                target="_blank" class="external-link">Mail</a> oder auch durch <a
+                href="http://www.telefonseelsorge.de/?q=node/7647" title="Externer Link - öffnet in neuem Fenster"
+                target="_blank" class="external-link">eine Face-to-Face Beratung</a> an die Telefonseelsorge wenden.</p>
+        <a target="_blank" href="https://hilfe.diakonie.de/telefonseelsorge">Quelle</a> Diakonie Deutschland
+    </div>
+
+    <#include "footer.html">
