--- a/WolkenNET/templates/subforum.html
+++ b/WolkenNET/templates/subforum.html
@@ -1,65 +1,78 @@
 <#include "base.html">
-<div class="container">
-<section class="content inbox">
-    <div class="container-fluid">
-        
-        <div class="row clearfix">
-            
-            <div class="col-lg-12">
-                
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item"><a href="/${bclink}">${bcsite}</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">${titlebar}</li>
-                    </ol>
-                  </nav>
-                  <div class="col">
-                    <div class="input-group search">
-                        <input type="text" class="form-control" placeholder="Suche nach Beiträgen im Thema: ${titlebar}">
-                        <span class="input-group-addon">
-                           
-                        </span>
-                    </div>
-                </div> 
-            </div>           
-        </div>        
-        <div class="pagi-top"><#include "snippets/pagination.html"></div>
-        <div class="row clearfix">
-            <div class="col-md-12 col-lg-12 col-xl-12">
-                <ul class="mail_list list-group list-unstyled">
-                    <#list conts>
-                       <#items as contss>
-                    <li class="list-group-item">
-                        <div class="media">
-                            <div class="pull-left">                                
-                            
-                                <div class="checkbox">
-                                    <a href="/profil/${contss.username}"><img src="https://www.nailseatowncouncil.gov.uk/wp-content/uploads/blank-profile-picture-973460_1280.jpg"class="img-responsive img-th img-rounded"
-                                    style="max-height: 50px; max-width: 50px;"></a>
-                                </div>
-                                
-                               
-                            </div>
-                            <div class="media-body">
-                                <div class="media-heading">
-                                    <a href="/beitrag/${contss.sublink}/${contss.userid}" class="m-r-10"> ${contss.sublink}</a>
-                                    <span class="badge bg-primary">Beitrag</span> <#if contss.perm = "10"><span class="badge bg-red">Admin</span></#if> <#if contss.locked = 1><span class="badge bg-yellow"><i class="fas fa-eye-slash"></i></span></#if>
-                                    <small class="float-right text-muted"><time class="hidden-sm-down" datetime="2017">${contss.timestamp}</time><i class="zmdi zmdi-attachment-alt"></i> </small>
-                                </div>
-                                <p class="msg">  ${contss.bbcode_text} </p>
+    <div class="container">
+        <section class="content inbox">
+            <div class="container-fluid">
+
+                <div class="row clearfix">
+
+                    <div class="col-lg-12">
+
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="/${bclink}">${bcsite}</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">${titlebar}</li>
+                            </ol>
+                        </nav>
+                        <div class="col">
+                            <div class="input-group search">
+                                <input type="text" class="form-control"
+                                    placeholder="Suche nach Beiträgen im Thema: ${titlebar}">
+                                <span class="input-group-addon">
+
+                                </span>
                             </div>
                         </div>
-                    </li>
-                    </#items>
-                    </#list>
-                </ul>
-                
+                    </div>
+                </div>
+                <div class="pagi-top">
+                    <#include "snippets/pagination.html">
+                </div>
+                <div class="row clearfix">
+                    <div class="col-md-12 col-lg-12 col-xl-12">
+                        <ul class="mail_list list-group list-unstyled">
+                            <#list conts>
+                                <#items as contss>
+                                    <li class="list-group-item">
+                                        <div class="media">
+                                            <div class="pull-left">
+
+                                                <div class="checkbox">
+                                                    <a href="/profil/${contss.username}"><img
+                                                            src="https://www.nailseatowncouncil.gov.uk/wp-content/uploads/blank-profile-picture-973460_1280.jpg"
+                                                            class="img-responsive img-th img-rounded"
+                                                            style="max-height: 50px; max-width: 50px;"></a>
+                                                </div>
+
+
+                                            </div>
+                                            <div class="media-body">
+                                                <div class="media-heading">
+                                                    <a href="/beitrag/${contss.sublink}/${contss.userid}"
+                                                        class="m-r-10"> ${contss.sublink}</a>
+                                                    <span class="badge bg-primary">Beitrag</span>
+                                                    <#if contss.perm="10"><span class="badge bg-red">Admin</span></#if>
+                                                    <#if contss.locked=1><span class="badge bg-yellow"><i
+                                                                class="fas fa-eye-slash"></i></span></#if>
+                                                    <small class="float-right text-muted"><time class="hidden-sm-down"
+                                                            datetime="2017">${contss.timestamp}</time><i
+                                                            class="zmdi zmdi-attachment-alt"></i> </small>
+                                                </div>
+                                                <p class="msg"> ${contss.bbcode_text} </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </#items>
+                            </#list>
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="pagi-bot">
+                    <#include "snippets/pagination.html">
+                </div>
+
             </div>
-        </div>
-        <div class="pagi-bot"><#include "snippets/pagination.html"></div>
-        
+        </section>
     </div>
-</section>
- </div>
-</div>
+    </div>
     <#include "footer.html">
