--- a/WolkenNET/templates/base.html
+++ b/WolkenNET/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="de">
 
 <head>
@@ -18,7 +18,8 @@
   <meta property="og:description"
     content="Das WolkenNET beschäftigt sich mit sämtlichen psychischen Krankheiten, hier findest du Tipps und Tricks, Anlaufstellen, Kliniken und Ärzte. Wir würden uns freuen wenn du dem WolkenNET etwas beitragen würdest">
   <title>WolkenNET - ${titlebar}</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="/js/jquery.timeago.js"></script>
   <script src="https://kit.fontawesome.com/3046fddc30.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -31,6 +32,8 @@
     integrity="sha512-G3jAqT2eM4MMkLMyQR5YBhvN5/Da3IG6kqgYqU9zlIH4+2a+GuMdLb5Kpxy6ItMdCfgaKlo2XFhI0dHtMJjoRw=="
     crossorigin="anonymous"></script>
   <script src="https://www.google.com/recaptcha/api.js"></script>
+  <link rel="stylesheet" href="/css/jquery.bbcode.css">
+  <script src="/js/jquery.bbcode.js"></script>
 </head>
 
 <body>
@@ -48,9 +51,9 @@
             Erfahrungen
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownErfahrungen">
-            <a class="dropdown-item" href="#"><i class="fas fa-pills"></i> Medikamente</a>
-            <a class="dropdown-item" href="/therapien"><i class="fas fa-user-check"></i> Therapien</a>
-            <a class="dropdown-item" href="/klinikundaerzte"><i class="fas fa-user-md"></i> Klinik & Ärzte</a>
+            <a class="dropdown-item" href="/medikamente"><i class="fas fa-prescription-bottle-alt"></i>   Medikamente</a>
+            <a class="dropdown-item" href="/therapien"><i class="fas fa-notes-medical"></i>   Therapien</a>
+            <a class="dropdown-item" href="/klinikundaerzte"><i class="fas fa-briefcase-medical"></i> Klinik & Ärzte</a>
           </div>
         </li>
         <#if permissions="10">
