--- a/WolkenNET/templates/beitrag.html
+++ b/WolkenNET/templates/beitrag.html
@@ -22,9 +22,25 @@
                                     </p>
                                 </div>
                             </div>
+                            
                             <div class="col-lg-8">
                                 <div>${bbcode_text}</div>
                             </div>
+                            <#if permissions = "10">
+                            <div class="col-lg-4 col-xl-4">
+                                <div class="">
+                                    <h5 class="mb-0 author-text">Admin Panel - Nutzerverwaltung</h4>
+                                    <p class="text-muted">
+                                        Achtung Löschungen können nicht rückgänig gemacht werden!
+                                    </p>
+                                    
+                                   <a type="button" class="btn btn-danger btn-sm btn-block" href="/ap/api/ban/user?id=${uid}"><i class="fas fa-lock"></i> Nutzer Sperren</a>
+                                    <a type="button" class="btn btn-outline-danger btn-sm btn-block" href="/ap/api/lock/contributions?id=${id}"><i class="fas fa-eye-slash"></i> Beitrag unsichtbar machen</a>
+                                    <a type="button" class="btn btn-warning btn-sm btn-block" href="/ap/api/delete/contribution?id=${id}"><i class="fas fa-trash-alt"></i> Beitrag löschen</a>
+                                    
+                                </div>
+                            </div>
+                            </#if>
                         </div>
                     </div>
                 </div>
