--- a/WolkenNET/templates/beitrag.html
+++ b/WolkenNET/templates/beitrag.html
@@ -7,7 +7,7 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/${bclink}">${bcsite}</a></li>
                             <li class="breadcrumb-item"><a href="/thema/${bc2_link}">${bc2}</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">${titlebar}</li>
+                            <li class="breadcrumb-item active" aria-current="page">${titlebar}</li> 
                         </ol>
                     </nav>
                     <div>
@@ -16,7 +16,7 @@
                                 <div class="card-box text-center">
                                     <img src="https://www.nailseatowncouncil.gov.uk/wp-content/uploads/blank-profile-picture-973460_1280.jpg"
                                         class="rounded-circle avatar-xl img-thumbnail" alt="profile-image">
-                                    <h4 class="mb-0 author-text <#if perm = "10">admin</#if>">${author_name}</h4>
+                                    <a href="/profil/${author_name}"><h4 class="mb-0 author-text <#if perm = "10">admin</#if>">${author_name}</h4></a>
                                     <p class="text-muted">
                                         <#if authority !="Kein Titel">${authority}</#if>
                                     </p>
